# sportsAPI

./: .gitignore  Dockerfile  README.md  cryptoConverter.js  docker-compose.yaml  index.js  logger.py  manage.py  package-lock.json  package.json  pyproject.toml
api/: settings.py
frontend/: .gitignore
frontend/public/: index.html  python.json
frontend/src/: App.tsx
frontend/src/components/: Quiz.tsx
frontend/src/styles/: App.css
src/: main.ts
src/api/: asgi.py  settings.py  urls.py  wsgi.py
src/sayajin/: sayajin.controller.ts  sayajin.module.ts  sayajin.service.ts
src/sports/: apps.py  models.py  serializers.py  urls.py  views.py
src/sports/fixtures/: famous_athletes.json  sports.json
src/sports/migrations/: 0001_initial.py  0002_auto_20250904_1252.py  0003_famousathlete_active_famousathlete_birthdate_and_more.py  0004_record.py
src/sports/models/: models.py
src/sports/serializers/: serializers.py
src/sports/views/: views.py
